sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:12: error: ')' expected but '}' found.
  }
  ^AlgGnomeSort:17: error: Unmatched closing brace '}' ignored here
}
^